--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     </div>
     <div id="map"></div>
     <script src="script.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBHL_1DJMdMTtzzB5fzW5QLrZ3eEJX7Yqc&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBHL_1DJMdMTtzzB5fzW5QLrZ3eEJX7Yqc&callback=initMap&libraries=places"></script>
 </body>
 </html>
